# ccnotify

./: index.html  package.json  pnpm-lock.yaml
.github/workflows/: build.yml
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  hook_server.rs  lib.rs  main.rs  models.rs  state.rs  transcript.rs  tray.rs
src/components/: SessionCard.tsx  SessionList.tsx  Settings.tsx  StatusBadge.tsx
src/hooks/: useSessions.ts
src/lib/: ipc.ts  types.ts
